# claude-redline

./: .gitignore  .mcp.json  AUTO-REVIEW-SETUP.md  CHANGELOG.md  CONTRIBUTING.md  DATA-STRUCTURE.md  INTEGRATION.md  LICENSE  PROMPT-TEMPLATES.md  README.md  SECURITY.md  build_ui.py  claude-custom-instructions.json  example-claude-code-config-dark.json  example-claude-code-config.json  example-claude-desktop-config-dark.json  example-mcp-config.json  main.py  pyproject.toml  test_server.py
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
commands/: redline.md
examples/: test_mcp_integration.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CodeViewer.tsx
frontend/src/themes/: applyTheme.ts  index.ts  types.ts
frontend/src/utils/: exportHtml.ts
skills/reviewer/: SKILL.md
src/redline/: __init__.py  server.py  themes.py
src/redline/static/: index.html
src/redline/static/assets/: index-3I2jNWkY.js  index-B2gzzzXN.css  index-BVfgopI0.js  index-BWvasjS9.css  index-BpGbBKeN.css  index-BpnWWLR6.js  index-C9j2Aa9i.js  index-CF0zj4J1.css  index-CNdOBfFc.css  index-Ch9fKKPJ.js  index-CipXz0j8.js  index-Cqe49pzt.js  index-Cy77vgxc.css  index-CyiqBAWK.css  index-D9mxucVR.css  index-DCEKZaKc.js  index-DG8s4DVf.js  index-DHxrc-bJ.js  index-DNa-L6JO.js  index-DVW-U-lj.css  index-DdyrYQy7.js  index-Dkq5_cxd.js  index-jx70cmm6.js  index-mi5xe96x.css  index-yI80DfGa.css
tests/: __init__.py  test_server.py
