[project]
name = "claude-redline"
version = "0.1.0"
description = "A Human-in-the-Loop (HITL) review interface for the Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
redline = "redline.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redline"]

[tool.hatch.build.targets.wheel.force-include]
"src/redline/static" = "redline/static"
